force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__AuthorizationRecordText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthorizationRecordText__c</fullName>
    <label>Authorization Record</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthorizationRecordText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>