force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__CardSchemeName__c.field-meta.xml
<CustomField>
    <fullName>ssot__CardSchemeName__c</fullName>
    <label>Card Scheme</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CardSchemeName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>