force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__City__c.field-meta.xml
<CustomField>
    <fullName>ssot__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>City</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>