force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__FinancialAccountTransactionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinancialAccountTransactionType__c</fullName>
    <label>Financial Account Transaction Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinancialAccountTransactionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>