force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__FinancialTransactionCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinancialTransactionCategory__c</fullName>
    <label>Financial Transaction Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinancialTransactionCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>