force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__IsDirectDeposit__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDirectDeposit__c</fullName>
    <label>Is Direct Deposit</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDirectDeposit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>