force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__IsOverdraftFee__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOverdraftFee__c</fullName>
    <label>Is Overdraft Fee</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOverdraftFee</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>