force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__IsPayrollAdvance__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPayrollAdvance__c</fullName>
    <label>Is Payroll Advance</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPayrollAdvance</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>