force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__MechantLocationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__MechantLocationIdentifier__c</fullName>
    <label>Merchant Location Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MechantLocationIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>