force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__rel_1702009250127_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009250127_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FinancialAccountTransaction_Financia_rel</label>
    <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
    <relationshipLabel>FinancialAccountTransaction_Financia_rel</relationshipLabel>
    <relationshipName>rel_1702009250127_end</relationshipName>
    <type>Lookup</type>
</CustomField>