force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__RunningBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__RunningBalanceAmount__c</fullName>
    <label>Running Balance</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RunningBalanceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>