force-app/main/default/objects/ssot__FinancialAccountTransaction__dlm/fields/ssot__TransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionAmount__c</fullName>
    <label>Transaction Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>